--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Users/jesse/Dropbox/Dropbox/Jesse/Estudos/CyberDef/SENAI/SEMS_2/POO/DESAFIO3/POO_S2_D3/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0.jar"/>
+	<classpathentry kind="lib" path="D:/Users/jesse/Dropbox/Dropbox/Jesse/Estudos/CyberDef/SENAI/SEMS_2/POO/DESAFIO3/POO_S2_D3/JAVA/D3_EstoqueApp/mariaDb/mariadb-java-client-3.5.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
